deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: kommunicate-ci-cd 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: us-central1-docker.pkg.dev/high-splicer-429006-m7/kommunicate-repo-image/web-app1:image_tag
          ports:
            - containerPort: 80
